--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-boto3==1.4.1
-celery==4.0.0
-flake8==3.2.1
-pep8==1.7.0
-pyflakes==1.3.0
-pylint==1.6.4
-pylint-plugin-utils==0.2.4
-redis==2.10.5
-pylint-common==0.2.2
-psutil==5.0.0
+boto3>=1.4.1
+celery>=4.0.0
+flake8>=3.2.1
+pep8>=1.7.0
+pyflakes>=1.3.0
+pylint>=1.6.4
+pylint-plugin-utils>=0.2.4
+redis>=2.10.5
+pylint-common>=0.2.2
+psutil>=5.0.0
